--- a/src/components/Slider/Slider/Slider.module.css
+++ b/src/components/Slider/Slider/Slider.module.css
@@ -6,54 +6,11 @@
   padding: var(--space-500);
   padding-block-end: var(--space-500);
   margin-block: var(--space-600);
-  /* border: 1px solid black; */
-  -webkit-mask-image: linear-gradient(to right, black 97%, transparent 100%);
-  mask-image: linear-gradient(to right, black 97%, transparent 100%);
+  -webkit-mask-image: linear-gradient(to right, transparent 0%, black 2%, black 98%, transparent 100%);
+  mask-image: linear-gradient(to right, transparent 0%, black 2%, black 98%, transparent 100%);
 }
 
-/* Modern browsers — Chrome 121+, Edge 121+, Firefox, Safari 18.2+ */
-/* .sliderContainer {
+.sliderContainer {
   scrollbar-width: auto;
-  scrollbar-color: var(--primera-30) var(--primera-100);
-} */
-
-/* Legacy WebKit — older Chrome/Edge/Safari, radius, borders & shadows */
-.sliderContainer::-webkit-scrollbar {
-  /* width: 10px; */
-  height: 20px;
+  scrollbar-color: var(--primera-30) var(--primera-80);
 }
-
-.sliderContainer::-webkit-scrollbar-track {
-  background-color: var(--primera-90);
-  border-radius: 10px;
-  /* padding: 2px; */
-}
-
-.sliderContainer::-webkit-scrollbar-track:hover {
-  background-color: var(--primera-80);
-}
-
-.sliderContainer::-webkit-scrollbar-track:active {
-  background-color: var(--primera-80);
-}
-
-
-.sliderContainer::-webkit-scrollbar-thumb {
-  background-color: var(--primera-60);
-  border-radius: 10px;
-  /* min-height: 30px; */
-}
-
-.sliderContainer::-webkit-scrollbar-thumb:hover {
-  background-color: var(--primera-50);
-}
-
-.sliderContainer::-webkit-scrollbar-thumb:active {
-  background-color: var(--primera-50);
-}
-
-/* .sliderContainer::-webkit-scrollbar-button {
-  display: none;
-  width: 0;
-  height: 0;
-} */
